Added a link and fixed a typo

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 	
 </head>
 <body>
-<h1>Welcme to my Dev Box</h1>
+<h1 style="font-type=verdana;">Welcome to my Dev Box</h1>
+	
+	<p>Check this puppy out <a href="http://www.google.com.au">Google</a></p>
 <script src="./javascripts/application.js"></script>
 </body>
 </html>
