--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge" />
 <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
 <title>Welcomee to my Dev Box</title>
+<link rel="stylesheet" href="style.css">
  
 <!--[if (gt IE 8) | (IEMobile)]><!-->
 <link rel="stylesheet" href="./stylesheets/application.css" />
