--- a/index.html
+++ b/index.html
@@ -19,7 +19,18 @@
 	
 </head>
 <body>
-<h1 style="font-type=verdana;">Welcome to my Dev Box</h1>
+	<header>
+		<h1 style="font-type=verdana;">Welcome to my Dev Box</h1>
+	</header>
+	
+	<section>
+		<h2>This is a Section.</h2>
+	</section>
+	
+	
+	<footer>
+		<h4>Copyright &copy; 2015 </h4>
+	</footer>
 	
 	<p>Check this puppy out <a href="http://www.google.com.au">Google</a></p>
 <script src="./javascripts/application.js"></script>
