Added Image to Section

--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 	
 	<section>
 		<h2>This is a Section.</h2>
-		<p>Check this puppy out <a href="http://www.google.com.au">Google</a></p>
+		<p>Check this Kitty out <a href="http://www.google.com.au">Google</a></p>
+		<img src="ironcat.png" alt="Iron Cat OctoKitty">
 	</section>
 	
 	
