--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 	<section>
 		<h2>This is a Section.</h2>
 		<p>Check this Kitty out <a href="http://www.google.com.au">Google</a></p>
-		<img class="kitty" src="ironcat.png" alt="Iron Cat OctoKitty" length="250" width="250">
+		<img src="ironcat.png" alt="Iron Cat OctoKitty" length="250" width="250">
 	</section>
 	
 	
